[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/Game.gd" id=1]
[ext_resource type="PackedScene" path="res://scenes/Car.tscn" id=2]
[ext_resource type="PackedScene" path="res://scenes/HUD.tscn" id=3]
[ext_resource type="PackedScene" path="res://scenes/UpgradeMenu.tscn" id=4]
[ext_resource type="PackedScene" path="res://scenes/PauseMenu.tscn" id=5]
[ext_resource type="PackedScene" path="res://scenes/RoadBackdrop.tscn" id=6]
[ext_resource type="PackedScene" path="res://scenes/SteeringWheel.tscn" id=7]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id=8]
[ext_resource type="Script" path="res://scripts/AudioManager.gd" id=9]

[node name="Main" type="Node2D"]
script = ExtResource(1)

[node name="AudioManager" type="Node" parent="."]
script = ExtResource(9)

[node name="Car" parent="." instance=ExtResource(2)]
position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="Car"]
current = true
position = Vector2(0, 0)

[node name="World" type="Node2D" parent="."]

[node name="RoadBackdrop" parent="World" instance=ExtResource(6)]

[node name="Spawner" type="Node2D" parent="World"]
script = ExtResource(8)
game_path = NodePath("/root/Main")
car_path = NodePath("/root/Main/Car")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource(3)]

[node name="SteeringWheel" parent="CanvasLayer" instance=ExtResource(7)]

[node name="UpgradeMenu" parent="CanvasLayer" instance=ExtResource(4)]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource(5)]
